[package]
name = "github-func-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1.1"
github-flows = "0.3.2"
openai-flows = "0.1.2"
serde_json = "1.0.93"
tokio_wasi = "1.25.1"
